# jobscope

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  lint.yml
docs/: Makefile  conf.py  index.rst  installation.rst  usage.rst
jobscope-agent/: Cargo.toml
jobscope-agent/src/: collectors.rs  main.rs  metrics.rs  mode.rs
jobscope-agent/src/collectors/: cpu.rs  gpu.rs  process.rs
src/: jobscope-cli.py
src/jobscope/: __init__.py  __main__.py  cli.py  logging.py
src/jobscope/scope/: __init__.py  get_data.py  scope.py  tui.py
src/jobscope/worker/: __init__.py  demo_worker.py  local_worker.py  slurm_worker.py  utils.py
tests/integration/: conftest.py  docker-compose.yml  start_cluster.sh  test_local.py  test_slurm.py
tests/integration/docker/: Dockerfile.slurm-test  docker-compose.yml
tests/integration/scripts/: cluster.sh
