[project]
name = "jobscope"
version = "0.1.0"
description = "System resource monitoring for compute clusters"
readme = "README.md"
authors = [
    { name = "Benoît Malézieux", email = "benoit.mx2010@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "textual>=0.40.0",
]

[build-system]
requires = ["maturin>=1.0,<2.0", "puccinialin"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
module-name = "jobscope"
python-source = "src"
manifest-path = "jobscope-agent/Cargo.toml"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
addopts = "-ra"
markers = [
    "slurm: requires the local Slurm docker cluster",
]
