[package]
name = "jobscope-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "jobscope"
path = "src/bin/jobscope.rs"

[[bin]]
name = "jobscope-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
nvml-wrapper = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.37.2"
